--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
       <p>Address: MBZUAI, Masdar City, Abu Dhabi, United Arab Emirates</p>
     </div>
     <div class="social-icons">
-      <a href="https://github.com/earthvilab" target="_blank" aria-label="GitHub">
+      <a href="https://github.com/earthai-alliance" target="_blank" aria-label="GitHub">
         <i class="fab fa-github"></i>
       </a>
     </div>
@@ -909,4 +909,5 @@
 
 </body>
 </html>
+
 
