--- a/index.html
+++ b/index.html
@@ -761,13 +761,13 @@
     <h2 class="section-title">💡 Projects</h2>
     <div class="projects-grid">
       <div class="project-card">
-        <img src="static/images/Fig2.png" alt="GeoVLM-R1" class="project-image">
+        <img src="static/images/Fig2.png" alt="GeoVLMs" class="project-image">
         <div class="project-content">
           <div class="project-title">
-            <a href="https://mustansarfiaz.github.io/GeoVLM-R1/" target="_blank">GeoVLM-R1</a>
+            <a href="geovlms.html">GeoVLMs</a>
           </div>
           <div class="project-description">
-            GeoVLM-R1, a reinforcement learning framework that encourages VLM to enhance its reasoning capabilities with flexibility, scalability, and ease of experimentation in mind for diverse EO tasks.
+            A comprehensive framework for geospatial vision-language models, including EarthDial for multi-sensory earth observations and GeoVLM-R1 for reinforcement learning-based reasoning in remote sensing tasks.
           </div>
         </div>
       </div>
@@ -849,11 +849,11 @@
   <div class="container">
     <h2 class="section-title">📬 Contact</h2>
     <div class="contact-info">
-      <p>Email: <a href="mailto:mustansar[.] fiaz [at] ibm[.]com">mustansar[.] fiaz [at] ibm[.]com</a></p>
+      <p>Email: <a href="mailto:earth.vi.lab@gmail.com">earth.vi.lab@gmail.com</a></p>
       <p>Address: MBZUAI, Masdar City, Abu Dhabi, United Arab Emirates</p>
     </div>
     <div class="social-icons">
-      <a href="https://github.com/earthai-alliance" target="_blank" aria-label="GitHub">
+      <a href="https://github.com/earthvilab" target="_blank" aria-label="GitHub">
         <i class="fab fa-github"></i>
       </a>
     </div>
@@ -909,5 +909,3 @@
 
 </body>
 </html>
-
-
