--- a/geovlms.html
+++ b/geovlms.html
@@ -392,15 +392,15 @@
       
       <!-- EarthDial -->
       <div class="project-card">
-        <img src="static/images/earthdial.png" alt="EarthDial" class="project-image">
+        <img src="static/images/EarthDial_Model_Archiecture.png" alt="EarthDial" class="project-image">
         <div class="project-content">
           <h3 class="project-title">EarthDial</h3>
           <div class="project-links">
-            <a href="https://github.com/earthvilab/earthdial" target="_blank" class="project-link">
+            <a href="https://github.com/hiyamdebary/EarthDial" target="_blank" class="project-link">
               <i class="fab fa-github"></i> GitHub
             </a>
             <a href="#" class="project-link">
-              <i class="fas fa-file-pdf"></i> Paper
+              <i class="https://openaccess.thecvf.com/content/CVPR2025/papers/Soni_EarthDial_Turning_Multi-sensory_Earth_Observations_to_Interactive_Dialogues_CVPR_2025_paper.pdf"></i> Paper
             </a>
           </div>
           <p class="project-description">
@@ -440,3 +440,4 @@
 
 </body>
 </html>
+
