--- a/index.html
+++ b/index.html
@@ -775,10 +775,10 @@
         <img src="static/images/geo_bench_vlm.png" alt="GEOBench-VLM" class="project-image">
         <div class="project-content">
           <div class="project-title">
-            <a href="https://the-ai-alliance.github.io/GEO-Bench-VLM/" target="_blank">GEOBench-VLM</a>
+            <a href="geobench-vlm.html">GEOBench-VLM</a>
           </div>
           <div class="project-description">
-            GEOBench-VLM benchmark addresses the unique challenges of geospatial data, such as temporal analysis, fine-grained object detection, damage assessment, and spatial reasoning.
+            A comprehensive benchmarking framework for evaluating vision-language models on geospatial tasks, including temporal analysis, fine-grained object detection, damage assessment, and spatial reasoning capabilities.
           </div>
         </div>
       </div>
