--- a/geobench-vlm.html
+++ b/geobench-vlm.html
@@ -445,7 +445,7 @@
 
       <!-- EarthDial -->
       <div class="project-card">
-        <img src="static/images/earthdial.png" alt="EarthDial" class="project-image">
+        <img src="static/images/EarthDial_Model_Archiecture.png" alt="EarthDial" class="project-image">
         <div class="project-content">
           <h3 class="project-title">EarthDial</h3>
           <div class="project-links">
@@ -471,3 +471,4 @@
 
 </body>
 </html>
+
