--- a/index.html
+++ b/index.html
@@ -783,13 +783,13 @@
         </div>
       </div>
       <div class="project-card">
-        <img src="static/images/thinkgeo.png" alt="ThinkGeo" class="project-image">
+        <img src="static/images/thinkgeo.png" alt="EarthVision Agents" class="project-image">
         <div class="project-content">
           <div class="project-title">
-            <a href="https://mbzuai-oryx.github.io/ThinkGeo/" target="_blank">ThinkGeo</a>
+            <a href="earthvision-agents.html">EarthVision Agents</a>
           </div>
           <div class="project-description">
-            ThinkGeo is a specialized benchmark designed to evaluate how language model agents handle complex remote sensing tasks through structured tool use and step-by-step reasoning.
+            Agent frameworks for Earth AI that enable autonomous systems to perform complex Earth Observation tasks through structured reasoning, tool use, and multi-step problem solving in remote sensing applications.
           </div>
         </div>
       </div>
