--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
             <a href="geovlms.html">GeoVLMs</a>
           </div>
           <div class="project-description">
-            A comprehensive framework for geospatial vision-language models, including EarthDial for multi-sensory earth observations and GeoVLM-R1 for reinforcement learning-based reasoning in remote sensing tasks.
+            GeoVLMs are multimodal models that analyze geospatial imagery, enabling users to extract insights and reason about spatial information through natural language queries.
           </div>
         </div>
       </div>
@@ -909,3 +909,4 @@
 
 </body>
 </html>
+
